Changes to eels notebook to set up dT calculations

--- a/notebooks/EELS/Analyse_Low_Loss.ipynb
+++ b/notebooks/EELS/Analyse_Low_Loss.ipynb
@@ -765,8 +765,9 @@
    "source": [
     "from scipy.optimize import leastsq\n",
     "\n",
-    "def Drude(E,Ep,Ew):\n",
+    "def Drude(E,Ep,Ew, gamma=1):\n",
     "    eps = 1 - Ep**2/(E**2+Ew**2) +1j* Ew* Ep**2/E/(E**2+Ew**2)\n",
+    "    eps = 1 - (Ep**2 - Ew * E * 1j) / (E**2 + 2 * E * gamma * 1j)  # Mod drude ter\n",
     "    elf = (-1/eps).imag\n",
     "    return eps,elf\n",
     "\n",
@@ -777,14 +778,14 @@
     "    return np.abs(err)#/np.sqrt(y)\n",
     "\n",
     "\n",
-    "pin2 = np.array([15,1,.7])\n",
+    "pin2 = np.array([9,1,.7, 1.11])\n",
     "E = energy_scale = eels_dataset.energy_loss\n",
-    "startFit =np.argmin(abs(energy_scale-13))\n",
-    "endFit = np.argmin(abs(energy_scale-18))\n",
+    "startFit =np.argmin(abs(energy_scale-6))\n",
+    "endFit = np.argmin(abs(energy_scale-15))\n",
     "    \n",
     "p2, lsq = leastsq(errfDrude, pin2, args=(eels_dataset[startFit:endFit], energy_scale[startFit:endFit]), maxfev=2000)\n",
     "\n",
-    "eps, elf =Drude(energy_scale,p2[0],p2[1])\n",
+    "eps, elf =Drude(energy_scale,p2[0],p2[1],p2[3])\n",
     "drudePSD = p2[2]* elf\n",
     "plt.figure()\n",
     "\n",
@@ -797,7 +798,8 @@
     "#plt.gca().set_ylim(-0.01,0.2)\n",
     "print(f\"Drude Theory with Plamson Energy: {p2[0]:2f} eV and plasmon Width {p2[1]:.2f} eV\") \n",
     "print(f\"Max of Plasmon at {energy_scale[drudePSD.argmax(0)]:.2f} eV\")\n",
-    "print(f\"Amplitude of  {p2[2]:.2f} was deteremined by fit \")\n"
+    "print(f\"Amplitude of  {p2[2]:.2f} was deteremined by fit \")\n",
+    "p2\n"
    ]
   },
   {
@@ -1249,26 +1251,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'p' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[36], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mp\u001b[49m[\u001b[38;5;241m3\u001b[39m]\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'p' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "p[3]"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1822,7 +1810,7 @@
   "kernelspec": {
    "display_name": "pyTEMlib",
    "language": "python",
-   "name": "pytemlib"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1834,7 +1822,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   },
   "toc": {
    "base_numbering": "3",
@@ -1848,11 +1836,6 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": true
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "838e0debddb5b6f29d3d8c39ba50ae8c51920a564d3bac000e89375a158a81de"
-   }
   }
  },
  "nbformat": 4,
