--- a/notebooks/EELS/Analyse_Low_Loss.ipynb
+++ b/notebooks/EELS/Analyse_Low_Loss.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "hideCode": false,
     "hidePrompt": false,
@@ -126,11 +126,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You don't have igor2 installed.     If you wish to open igor files, you will need to install it     (pip install igor2) before attempting.\n",
-      "You don't have gwyfile installed.     If you wish to open .gwy files, you will need to      install it (pip install gwyfile) before attempting.\n",
-      "Symmetry functions of spglib enabled\n",
-      "Using kinematic_scattering library version {_version_ }  by G.Duscher\n",
-      "pyTEM version:  0.2023.8.1\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "pyTEM version:  0.2023.9.19.dev1\n"
      ]
     }
    ],
@@ -179,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "hideCode": false,
     "hidePrompt": false,
@@ -189,7 +187,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "47622b0634a04cc1b2ac91bfb9b8d377",
+       "model_id": "302d8f1e52ec4b31b7ab829364bfa7df",
        "version_major": 2,
        "version_minor": 0
       },
@@ -204,7 +202,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "directory moved since last time read\n"
+      "[sidpy.Dataset of type SPECTRUM with:\n",
+      " dask.array<array, shape=(2048,), dtype=float32, chunksize=(2048,), chunktype=numpy.ndarray>\n",
+      " data contains: intensity (counts)\n",
+      " and Dimensions: \n",
+      "energy_loss:  energy-loss (eV) of size (2048,)\n",
+      " with metadata: ['experiment']]\n",
+      "Please use new SciFiReaders Package for full functionality\n"
      ]
     }
    ],
@@ -219,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "hideCode": false,
     "hidePrompt": false,
@@ -229,7 +233,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "489e0dd2f5a140f0ac9d16117b8d98d1",
+       "model_id": "024a7772df2d419783bb1058d5662799",
        "version_major": 2,
        "version_minor": 0
       },
@@ -268,6 +272,27 @@
     "eels_dataset.units = '%/eV'\n",
     "eels_dataset.quantity = 'scattering probability'\n",
     "view = eels_dataset.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'instance' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\gduscher\\Documents\\Github\\pyTEMlib\\notebooks\\EELS\\Analyse_Low_Loss.ipynb Cell 9\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/gduscher/Documents/Github/pyTEMlib/notebooks/EELS/Analyse_Low_Loss.ipynb#X56sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m instance(eels_dataset)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'instance' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "instance(eels_dataset)"
    ]
   },
   {
@@ -1739,7 +1764,7 @@
   "kernelspec": {
    "display_name": "pyTEMlib",
    "language": "python",
-   "name": "python3"
+   "name": "pytemlib"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1751,7 +1776,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   },
   "toc": {
    "base_numbering": "3",
