update EELS notebooks for google colab

--- a/notebooks/EELS/Analyse_Low_Loss-SI.ipynb
+++ b/notebooks/EELS/Analyse_Low_Loss-SI.ipynb
@@ -167,7 +167,7 @@
     "# pyTEMlib setup ------------------\n",
     "if test_package('pyTEMlib') < '0.2023.6.6':\n",
     "    print('installing pyTEMlib')\n",
-    "    !{sys.executable} -m pip install --upgrade sidpy\n",
+    "    !{sys.executable} -m pip install git+https://github.com/pycroscopy/sidpy.git@main -q\n",
     "    !{sys.executable} -m pip install --upgrade git+https://github.com/pycroscopy/SciFiReaders.git@main -q\n",
     "    !{sys.executable} -m pip install --upgrade git+https://github.com/pycroscopy/pyTEMlib.git@main -q --upgrade\n",
     "    \n",
@@ -217,6 +217,13 @@
     "sys.path.insert(0, '../../')\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
+    "\n",
+    "\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    from google.colab import output\n",
+    "    output.enable_custom_widget_manager()\n",
+    "    from google.colab import drive\n",
+    "\n",
     "\n",
     "# additional package \n",
     "import ipywidgets as ipyw\n",
