--- a/notebooks/EELS/Analysis_Core_Loss.ipynb
+++ b/notebooks/EELS/Analysis_Core_Loss.ipynb
@@ -177,9 +177,9 @@
     "\n",
     "\n",
     "# pyTEMlib setup ------------------\n",
-    "if test_package('pyTEMlib') < '0.2023.8.1':\n",
+    "if test_package('pyTEMlib') < '0.2023.11.1':\n",
     "    print('installing pyTEMlib')\n",
-    "    !{sys.executable} -m pip install git+https://github.com/pycroscopy/sidpy\n",
+    "    !{sys.executable} -m pip install git+https://github.com/pycroscopy/sidpy.git@main -q\n",
     "    !{sys.executable} -m pip install git+https://github.com/pycroscopy/SciFiReaders.git@main -q\n",
     "    !{sys.executable} -m pip install git+https://github.com/pycroscopy/pyTEMlib.git@main -q --upgrade\n",
     "    \n",
@@ -229,6 +229,12 @@
     "\n",
     "import sys\n",
     "sys.path.insert(0, '../..')\n",
+    "\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    from google.colab import output\n",
+    "    output.enable_custom_widget_manager()\n",
+    "    from google.colab import drive\n",
+    "\n",
     "import pyTEMlib\n",
     "import pyTEMlib.file_tools as ft     # File input/ output library\n",
     "import pyTEMlib.image_tools as it\n",
