--- a/notebooks/EELS/Analysis_Core_Loss.ipynb
+++ b/notebooks/EELS/Analysis_Core_Loss.ipynb
@@ -242,6 +242,9 @@
     "\n",
     "import pyTEMlib.interactive_eels as ieels  # Dialogs for EELS input and quantification\n",
     "\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    drive.mount(\"/content/drive\")\n",
+    "\n",
     "# For archiving reasons it is a good idea to print the version numbers out at this point\n",
     "print('pyTEM version: ', pyTEMlib.__version__)\n",
     "\n",
