crystal tool now compatible

--- a/notebooks/0_pyTEMlib.ipynb
+++ b/notebooks/0_pyTEMlib.ipynb
@@ -36,10 +36,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
