--- a/notebooks/Spectroscopy/EDS.ipynb
+++ b/notebooks/Spectroscopy/EDS.ipynb
@@ -80,11 +80,11 @@
     "\n",
     "\n",
     "# pyTEMlib setup ------------------\n",
-    "if test_package('pyTEMlib') < '0.2024.2.0':\n",
+    "if test_package('pyTEMlib') < '0.2024.02.0':\n",
     "    print('installing pyTEMlib')\n",
-    "    !{sys.executable} -m pip install git+https://github.com/pycroscopy/sidpy.git@main -q --upgrade\n",
-    "    !{sys.executable} -m pip install git+https://github.com/pycroscopy/SciFiReaders.git@main -q --upgrade\n",
-    "    !{sys.executable} -m pip install git+https://github.com/pycroscopy/pyTEMlib.git@main -q --upgrade\n",
+    "   \n",
+    "    !{sys.executable} -m pip install SciFiReaders -q --upgrade\n",
+    "    !{sys.executable} -m pip install pyTEMlib -q --upgrade\n",
     "\n",
     "# ------------------------------\n",
     "print('done')"
