--- a/notebooks/0_pyTEMlib.ipynb
+++ b/notebooks/0_pyTEMlib.ipynb
@@ -36,11 +36,15 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [],
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -59,7 +63,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.11.7"
   },
   "toc": {
    "base_numbering": "1",
