--- a/notebooks/Spectroscopy/Analyse_Low_Loss.ipynb
+++ b/notebooks/Spectroscopy/Analyse_Low_Loss.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "metadata": {
     "hideCode": false,
     "hidePrompt": false,
@@ -193,7 +193,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "398ee7476e5b446bb9b6ac1dd4b57d0a",
+       "model_id": "b52f04e9031a4daab9eb9754bcf50c6c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -215,107 +215,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (0,) (1973,) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[35], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m infoWidget\u001b[38;5;241m.\u001b[39mcore_loss\u001b[38;5;241m.\u001b[39mdo_fit(\u001b[38;5;241m1\u001b[39m)\n",
-      "File \u001b[1;32m~\\Documents\\Github\\pyTEMlib\\notebooks\\Spectroscopy\\../..\\pyTEMlib\\core_loss_widget.py:441\u001b[0m, in \u001b[0;36mCoreLoss.do_fit\u001b[1;34m(self, value)\u001b[0m\n\u001b[0;32m    439\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    440\u001b[0m     spectrum \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset\n\u001b[1;32m--> 441\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39medges \u001b[38;5;241m=\u001b[39m eels\u001b[38;5;241m.\u001b[39mfit_edges2(spectrum, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparent\u001b[38;5;241m.\u001b[39menergy_scale, edges)\n\u001b[0;32m    442\u001b[0m areal_density \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m    443\u001b[0m elements \u001b[38;5;241m=\u001b[39m []\n",
-      "File \u001b[1;32m~\\Documents\\Github\\pyTEMlib\\notebooks\\Spectroscopy\\../..\\pyTEMlib\\eels_tools.py:1432\u001b[0m, in \u001b[0;36mfit_edges2\u001b[1;34m(spectrum, energy_scale, edges)\u001b[0m\n\u001b[0;32m   1428\u001b[0m \u001b[38;5;66;03m########################\u001b[39;00m\n\u001b[0;32m   1429\u001b[0m \u001b[38;5;66;03m# Background Fit\u001b[39;00m\n\u001b[0;32m   1430\u001b[0m \u001b[38;5;66;03m########################\u001b[39;00m\n\u001b[0;32m   1431\u001b[0m bgd_fit_area \u001b[38;5;241m=\u001b[39m [background_fit_start, background_fit_end]\n\u001b[1;32m-> 1432\u001b[0m background, [A, r] \u001b[38;5;241m=\u001b[39m power_law_background(spectrum, energy_scale, bgd_fit_area, verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m   1434\u001b[0m \u001b[38;5;66;03m#######################\u001b[39;00m\n\u001b[0;32m   1435\u001b[0m \u001b[38;5;66;03m# Edge Fit\u001b[39;00m\n\u001b[0;32m   1436\u001b[0m \u001b[38;5;66;03m#######################\u001b[39;00m\n\u001b[0;32m   1437\u001b[0m x \u001b[38;5;241m=\u001b[39m energy_scale\n",
-      "File \u001b[1;32m~\\Documents\\Github\\pyTEMlib\\notebooks\\Spectroscopy\\../..\\pyTEMlib\\eels_tools.py:1376\u001b[0m, in \u001b[0;36mpower_law_background\u001b[1;34m(spectrum, energy_scale, fit_area, verbose)\u001b[0m\n\u001b[0;32m   1373\u001b[0m     err \u001b[38;5;241m=\u001b[39m yy \u001b[38;5;241m-\u001b[39m power_law(xx, pp[\u001b[38;5;241m0\u001b[39m], pp[\u001b[38;5;241m1\u001b[39m])\n\u001b[0;32m   1374\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m err\n\u001b[1;32m-> 1376\u001b[0m [p, _] \u001b[38;5;241m=\u001b[39m leastsq(bgdfit, p0, args\u001b[38;5;241m=\u001b[39m(y, x), maxfev\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2000\u001b[39m)\n\u001b[0;32m   1378\u001b[0m background_difference \u001b[38;5;241m=\u001b[39m y \u001b[38;5;241m-\u001b[39m power_law(x, p[\u001b[38;5;241m0\u001b[39m], p[\u001b[38;5;241m1\u001b[39m])\n\u001b[0;32m   1379\u001b[0m background_noise_level \u001b[38;5;241m=\u001b[39m std_dev \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mstd(background_difference)\n",
-      "File \u001b[1;32m~\\AppData\\Local\\anaconda3\\Lib\\site-packages\\scipy\\optimize\\_minpack_py.py:420\u001b[0m, in \u001b[0;36mleastsq\u001b[1;34m(func, x0, args, Dfun, full_output, col_deriv, ftol, xtol, gtol, maxfev, epsfcn, factor, diag)\u001b[0m\n\u001b[0;32m    418\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(args, \u001b[38;5;28mtuple\u001b[39m):\n\u001b[0;32m    419\u001b[0m     args \u001b[38;5;241m=\u001b[39m (args,)\n\u001b[1;32m--> 420\u001b[0m shape, dtype \u001b[38;5;241m=\u001b[39m _check_func(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mleastsq\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfunc\u001b[39m\u001b[38;5;124m'\u001b[39m, func, x0, args, n)\n\u001b[0;32m    421\u001b[0m m \u001b[38;5;241m=\u001b[39m shape[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m    423\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m n \u001b[38;5;241m>\u001b[39m m:\n",
-      "File \u001b[1;32m~\\AppData\\Local\\anaconda3\\Lib\\site-packages\\scipy\\optimize\\_minpack_py.py:29\u001b[0m, in \u001b[0;36m_check_func\u001b[1;34m(checker, argname, thefunc, x0, args, numinputs, output_shape)\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_check_func\u001b[39m(checker, argname, thefunc, x0, args, numinputs,\n\u001b[0;32m     28\u001b[0m                 output_shape\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m---> 29\u001b[0m     res \u001b[38;5;241m=\u001b[39m atleast_1d(thefunc(\u001b[38;5;241m*\u001b[39m((x0[:numinputs],) \u001b[38;5;241m+\u001b[39m args)))\n\u001b[0;32m     30\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (output_shape \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;129;01mand\u001b[39;00m (shape(res) \u001b[38;5;241m!=\u001b[39m output_shape):\n\u001b[0;32m     31\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m (output_shape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m1\u001b[39m):\n",
-      "File \u001b[1;32m~\\Documents\\Github\\pyTEMlib\\notebooks\\Spectroscopy\\../..\\pyTEMlib\\eels_tools.py:1373\u001b[0m, in \u001b[0;36mpower_law_background.<locals>.bgdfit\u001b[1;34m(pp, yy, xx)\u001b[0m\n\u001b[0;32m   1372\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mbgdfit\u001b[39m(pp, yy, xx):\n\u001b[1;32m-> 1373\u001b[0m     err \u001b[38;5;241m=\u001b[39m yy \u001b[38;5;241m-\u001b[39m power_law(xx, pp[\u001b[38;5;241m0\u001b[39m], pp[\u001b[38;5;241m1\u001b[39m])\n\u001b[0;32m   1374\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m err\n",
-      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (0,) (1973,) "
-     ]
-    }
-   ],
-   "source": [
-    "infoWidget.core_loss.do_fit(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "del infoWidget.core_loss.edges"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "datasets = {'Channel_000': infoWidget.datasets['Channel_000']}\n",
-    "eels_widget = pyTEMlib.eels_dialog.CompositionWidget(datasets)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'experiment': {'single_exposure_time': 2.0,\n",
-       "  'exposure_time': 1.65,\n",
-       "  'number_of_frames': 1,\n",
-       "  'collection_angle': 100.0,\n",
-       "  'convergence_angle': 0.0,\n",
-       "  'microscope': '',\n",
-       "  'acceleration_voltage': 199990.28125,\n",
-       "  'flux_ppm': 1749.5751953125,\n",
-       "  'count_conversion': 1,\n",
-       "  'beam_current': 0,\n",
-       "  'offset': 43.874,\n",
-       "  'dispersion': 0.030400000000000205},\n",
-       " 'zero_loss': {'shifted': array([-0.78760746])},\n",
-       " 'edges': {'model': {'background': array([2.30575906e+13, 2.30895712e+13, 2.31215739e+13, ...,\n",
-       "          1.34754166e+14, 1.34831446e+14, 1.34908749e+14]),\n",
-       "   'background-poly_0': 11984639771.133072,\n",
-       "   'background-poly_1': -131440.4613092735,\n",
-       "   'background-poly_2': 677.9204710365769,\n",
-       "   'background-A': -11977785542.521019,\n",
-       "   'background-r': -14179.30858153038,\n",
-       "   'spectrum': array([2392357.82531303, 2390171.04122685, 2387985.51015463, ...,\n",
-       "           539171.02851731,  539546.65798893,  539923.54047452]),\n",
-       "   'blurred': array([2839462.2 , 2843515.5 , 2851138.5 , ...,  541812.  ,  536994.4 ,\n",
-       "           534459.25], dtype=float32),\n",
-       "   'mask': array([0., 0., 0., ..., 1., 0., 1.]),\n",
-       "   'fit_parameter': array([-1.19777855e+10, -1.41793086e+04,  1.19846398e+10, -1.31440461e+05,\n",
-       "           6.77920471e+02,  2.40886360e+05]),\n",
-       "   'fit_area_start': 60.0,\n",
-       "   'fit_area_end': 106.072},\n",
-       "  'use_low_loss': False,\n",
-       "  'fit_area': {'fit_start': 60.0, 'fit_end': 106.072},\n",
-       "  '0': {'z': 13,\n",
-       "   'symmetry': 'L3',\n",
-       "   'element': 'Al',\n",
-       "   'onset': 73.1,\n",
-       "   'end_exclude': 106.0416,\n",
-       "   'start_exclude': 68.1,\n",
-       "   'all_edges': {'L3': {'onset': 73.1}, 'L2': {'onset': 73.1}},\n",
-       "   'chemical_shift': 0.0,\n",
-       "   'areal_density': 240886.3597548278,\n",
-       "   'original_onset': 73.1,\n",
-       "   'data': array([1.38581741e-09, 1.38441739e-09, 1.38301738e-09, ...,\n",
-       "          9.67082361e-09, 9.66664734e-09, 9.66247108e-09]),\n",
-       "   'X_section_type': 'XRPA',\n",
-       "   'X_section_source': 'pyTEMlib'}}}"
+       "{'experiment': {'acceleration_voltage': 60000.0}}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
