--- a/notebooks/Spectroscopy/Analyse_Low_Loss.ipynb
+++ b/notebooks/Spectroscopy/Analyse_Low_Loss.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "start_time": "2024-01-15T14:40:42.347318700Z"
@@ -129,10 +129,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You don't have igor2 installed.     If you wish to open igor files, you will need to install it     (pip install igor2) before attempting.\n",
-      "You don't have gwyfile installed.     If you wish to open .gwy files, you will need to      install it (pip install gwyfile) before attempting.\n",
-      "Symmetry functions of spglib enabled\n",
-      "Using kinematic_scattering library version {_version_ }  by G.Duscher\n",
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
       "pyTEM version:  0.2024.05.0\n"
      ]
     }
@@ -183,17 +181,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {
     "hideCode": false,
     "hidePrompt": false,
+    "scrolled": true,
     "tags": []
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b52f04e9031a4daab9eb9754bcf50c6c",
+       "model_id": "e97659f2b3e241258b41f43e7407140b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -215,16 +214,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8aef8a91-2b7f-4834-a33b-c2c0b88d3b77_1715976165623\n"
+     ]
+    }
+   ],
+   "source": [
+    "import uuid\n",
+    "import time\n",
+    "\n",
+    "# Combine UUID and timestamp\n",
+    "unique_id = f\"{uuid.uuid4()}_{int(time.time() * 1000)}\"\n",
+    "print(unique_id)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "infoWidget.core_loss.update_cl_dataset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'experiment': {'acceleration_voltage': 60000.0}}"
+       "{'experiment': {'single_exposure_time': 0.01,\n",
+       "  'exposure_time': 0.21,\n",
+       "  'number_of_frames': 21,\n",
+       "  'collection_angle': 33.0,\n",
+       "  'convergence_angle': 30.0,\n",
+       "  'acceleration_voltage': 0.0,\n",
+       "  'flux_ppm': 115.68867492675781,\n",
+       "  'count_conversion': 1,\n",
+       "  'beam_current': 0},\n",
+       " 'zero_loss': {'shifted': array([1.0174319]),\n",
+       "  'startFitEnergy': -1.0,\n",
+       "  'endFitEnergy': 1.0,\n",
+       "  'fit_parameter': array([-1.51964411e-01,  5.09698919e+03,  1.33700815e+00,  2.38917861e-01,\n",
+       "          5.06085447e+03,  1.72056710e+00]),\n",
+       "  'original_low_loss': '1EELS Acquire (low-loss)_new'}}"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "infoWidget.datasets['resolution_functions'].metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'experiment': {'single_exposure_time': 3.0,\n",
+       "  'exposure_time': 63.0,\n",
+       "  'number_of_frames': 21,\n",
+       "  'collection_angle': 50.0,\n",
+       "  'convergence_angle': 30.0,\n",
+       "  'acceleration_voltage': 60000.0,\n",
+       "  'flux_ppm': 34706.602478027344,\n",
+       "  'count_conversion': 1,\n",
+       "  'beam_current': 0},\n",
+       " 'zero_loss': {'shifted': array([1.0174319])},\n",
+       " 'edges': {'fit_area': {'fit_start': 120.0, 'fit_end': 600.0},\n",
+       "  '0': {'z': 5,\n",
+       "   'symmetry': 'K1',\n",
+       "   'element': 'B',\n",
+       "   'onset': 188.0,\n",
+       "   'end_exclude': 238.0,\n",
+       "   'start_exclude': 185.0,\n",
+       "   'all_edges': {'K1': {'onset': 188.0}},\n",
+       "   'chemical_shift': 0.0,\n",
+       "   'areal_density': 1745395038619.995,\n",
+       "   'original_onset': 188.0,\n",
+       "   'data': array([5.66032845e-09, 5.61175423e-09, 5.56318001e-09, ...,\n",
+       "          1.68366704e-10, 1.68110794e-10, 1.67854883e-10]),\n",
+       "   'X_section_type': 'XRPA',\n",
+       "   'X_section_source': 'pyTEMlib'},\n",
+       "  '1': {'z': 7,\n",
+       "   'symmetry': 'K1',\n",
+       "   'element': 'N',\n",
+       "   'onset': 401.6,\n",
+       "   'end_exclude': 451.6,\n",
+       "   'start_exclude': 396.6,\n",
+       "   'all_edges': {'K1': {'onset': 401.6}},\n",
+       "   'chemical_shift': 0.0,\n",
+       "   'areal_density': 5330240008575.439,\n",
+       "   'original_onset': 401.6,\n",
+       "   'data': array([2.25376447e-08, 2.23462509e-08, 2.21548571e-08, ...,\n",
+       "          5.61435758e-10, 5.60622520e-10, 5.59809282e-10]),\n",
+       "   'X_section_type': 'XRPA',\n",
+       "   'X_section_source': 'pyTEMlib'},\n",
+       "  'model': {'background': energy_loss:  energy-loss (eV) of size (2048,),\n",
+       "   'background-poly_0': -7789207450.593016,\n",
+       "   'background-poly_1': -92.67688006132725,\n",
+       "   'background-poly_2': 0.07927340377406612,\n",
+       "   'background-A': 7789231272.866521,\n",
+       "   'background-r': -13.743081547476294,\n",
+       "   'spectrum': energy_loss:  energy-loss (eV) of size (2048,),\n",
+       "   'blurred': array([139757.55   , 139617.84   , 139350.38   , ...,    658.92535,\n",
+       "             628.73956,    612.56323], dtype=float32),\n",
+       "   'mask': array([0., 0., 0., ..., 0., 0., 1.]),\n",
+       "   'fit_parameter': array([ 7.78923127e+09, -1.37430815e+01, -7.78920745e+09, -9.26768801e+01,\n",
+       "           7.92734038e-02,  1.74529850e+12,  5.33029998e+12]),\n",
+       "   'fit_area_start': 120.0,\n",
+       "   'fit_area_end': 600.0}}}"
+      ]
+     },
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,6 +377,15 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.close('all')"
+   ]
   },
   {
    "cell_type": "code",
