fixed bug in eels_tools

--- a/notebooks/Spectroscopy/Analyse_Low_Loss.ipynb
+++ b/notebooks/Spectroscopy/Analyse_Low_Loss.ipynb
@@ -77,6 +77,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "installing pyTEMlib\n",
       "done\n"
      ]
     }
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "start_time": "2024-01-15T14:40:42.347318700Z"
@@ -129,8 +130,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
+      "You don't have igor2 installed.     If you wish to open igor files, you will need to install it     (pip install igor2) before attempting.\n",
+      "You don't have gwyfile installed.     If you wish to open .gwy files, you will need to      install it (pip install gwyfile) before attempting.\n",
+      "Symmetry functions of spglib enabled\n",
+      "Using kinematic_scattering library version {_version_ }  by G.Duscher\n",
       "pyTEM version:  0.2024.05.0\n"
      ]
     }
