--- a/notebooks/4Dstem_File_Reader.ipynb
+++ b/notebooks/4Dstem_File_Reader.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Basics of reading an MRC file with 4D STEM data from the Spectra300 at UTK\n",
     "## By Austin Houston\n",
-    "### Last updated 2024-09-03"
+    "### Last updated 2024-09-14"
    ]
   },
   {
@@ -31,23 +31,15 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "sys.path.insert(0, '/Users/austin/Documents/GitHub/SciFiReaders/')\n",
-    "import SciFiReaders\n",
-    "print(\"SciFiReaders version: \", SciFiReaders.__version__)\n",
-    "\n",
-    "sys.path.insert(0,'/Users/austin/Documents/GitHub/pyTEMlib/')\n",
     "import pyTEMlib\n",
     "import pyTEMlib.file_tools as ft\n",
     "\n",
     "print(\"pyTEMlib version: \", pyTEMlib.__version__)\n",
     "\n",
-    "\n",
     "# for beginning analysis\n",
     "from sklearn.cluster import KMeans\n",
     "from sklearn.decomposition import PCA\n",
-    "from sklearn.cluster import KMeans\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
-    "from scipy.ndimage import center_of_mass\n"
+    "from sklearn.cluster import KMeans\n"
    ]
   },
   {
