--- a/notebooks/Spectroscopy/Analyse_Low_Loss.ipynb
+++ b/notebooks/Spectroscopy/Analyse_Low_Loss.ipynb
@@ -202,12 +202,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c74560c16a04411fa7ed276ff0b7cbd0",
+       "model_id": "14d4d0a343d241c7ac7e9363ae2121a5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "AppLayout(children=(Tab(children=(GridspecLayout(children=(Dropdown(description='directory:', layout=Layout(gr…"
+       "AppLayout(children=(VBox(children=(ToggleButtons(layout=Layout(width='auto'), options=('File', 'Spec.', 'LowLo…"
       ]
      },
      "metadata": {},
@@ -224,19 +224,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4083964757.425642\n"
+      "Channel_000 Channel_001 0\n",
+      "Channel_000 Channel_001 0\n",
+      "Channel_001 Channel_001 0\n",
+      "Channel_001 Channel_001 1\n",
+      "resolution_function Channel_001 1\n",
+      "resolution_function Channel_001 1\n",
+      "plasmon Channel_001 1\n",
+      "plasmon Channel_001 1\n",
+      "multiple_scattering Channel_001 1\n",
+      "multiple_scattering Channel_001 1\n"
      ]
     }
    ],
    "source": [
-    "infoWidget.low_loss.get_drude()\n"
+    "infoWidget.tab_buttons.index = 2\n",
+    "\n",
+    "infoWidget.low_loss.update_ll_sidebar()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "infoWidget.tabval = 2\n",
+    "infoWidget.tab_activated()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ipywidgets\n",
+    "infoWidget.tab.children = [infoWidget.tab_buttons, infoWidget.children[infoWidget.tab_buttons.index]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "infoWidget.info.update_dataset()"
    ]
   },
   {
@@ -967,7 +1007,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## peakfit"
    ]
