--- a/notebooks/Spectroscopy/Analyse_Low_Loss.ipynb
+++ b/notebooks/Spectroscopy/Analyse_Low_Loss.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-25T17:48:50.060660Z",
@@ -206,7 +206,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24d5e4408b284b4b8f51f8bcbdf62af4",
+       "model_id": "71ad1392b8164a899ff8186c459d546d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -228,37 +228,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "infoWidget._update()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "21"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "#infoWidget.datasets['_dif'] = infoWidget.spectrum\n",
-    "\n",
     "infoWidget.x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
