--- a/notebooks/Spectroscopy/Analyse_EELSs.ipynb
+++ b/notebooks/Spectroscopy/Analyse_EELSs.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-25T17:48:41.105440Z",
@@ -174,9 +174,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "pyTEM version:  0.2024.09.1\n"
+      "You don't have igor2 installed.     If you wish to open igor files, you will need to install it     (pip install igor2) before attempting.\n",
+      "You don't have gwyfile installed.     If you wish to open .gwy files, you will need to      install it (pip install gwyfile) before attempting.\n",
+      "Symmetry functions of spglib enabled\n",
+      "Using kinematic_scattering library version {_version_ }  by G.Duscher\n",
+      "pyTEM version:  0.2025.01.0\n"
      ]
     }
    ],
@@ -219,7 +221,35 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "561a0dbaa40b4b348fe5a2b267f1e8b3",
+       "model_id": "d511383382c64143831832038a6c540e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "AppLayout(children=(Tab(children=(GridspecLayout(children=(Dropdown(description='directory:', layout=Layout(gr…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "if 'google.colab' in sys.modules:\n",
+    "    drive.mount(\"/content/drive\")\n",
+    "import pyTEMlib.info_widget    \n",
+    "# filename = '../../example_data/AL-DFoffset0.00.dm3'\n",
+    "infoWidget= pyTEMlib.info_widget3.EELSWidget()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "802942432a224b15a984e401e278a074",
        "version_major": 2,
        "version_minor": 0
       },
@@ -233,7 +263,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d2cc9a74af445f89a3bd1e6e15034b3",
+       "model_id": "a47212009ee04ef0a1262cc8945b8bf4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1558,13 +1588,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "if 'google.colab' in sys.modules:\n",
-    "    drive.mount(\"/content/drive\")\n",
-    "import pyTEMlib.info_widget    \n",
-    "# filename = '../../example_data/AL-DFoffset0.00.dm3'\n",
-    "infoWidget= pyTEMlib.info_widget3.EELSWidget()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
