--- a/notebooks/Spectroscopy/Analyse_EELSs.ipynb
+++ b/notebooks/Spectroscopy/Analyse_EELSs.ipynb
@@ -215,13 +215,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d511383382c64143831832038a6c540e",
+       "model_id": "19a19d099fcd4206ba1d147412f71e4b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -236,8 +236,7 @@
    "source": [
     "if 'google.colab' in sys.modules:\n",
     "    drive.mount(\"/content/drive\")\n",
-    "import pyTEMlib.info_widget    \n",
-    "# filename = '../../example_data/AL-DFoffset0.00.dm3'\n",
+    "import pyTEMlib.info_widget    filename = '../../example_data/AL-DFoffset0.00.dm3'\n",
     "infoWidget= pyTEMlib.info_widget3.EELSWidget()\n"
    ]
   },
